[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/api.rs"
name = "api"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
api_server_sdk = { path = "../api_server_sdk" }
# Set published version in crates.io
pavex = "0.1.13"
conduit_core = { path = "../conduit_core" }

# Configuration
figment = { version = "0.10", features = ["env", "yaml"] }
serde = { version = "1", features = ["derive"]}

# Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "smallvec", "std", "registry", "tracing-log"] }
tracing-bunyan-formatter = "0.3"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
secrecy = "0.8"
serde_json = "1"

# On Linux pore-rust feature is required due to openssl crate
[target.'cfg(target_os = "linux")'.dev-dependencies]
jwt-simple = { version = "0.12", default-features=false, features=["pure-rust"] }

[target.'cfg(not(target_os = "linux"))'.dev-dependencies]
jwt-simple = { version = "0.12" }