[package]
name = "conduit_core"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/bp.rs"
name = "bp"

[dependencies]
anyhow = "1"
cargo_px_env = "0.1"
# Set published version in crates.io
pavex_cli_client = "0.1.13"
# Set published version in crates.io
pavex = "0.1.13"

time = { version = "0.3", features = ["serde"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "migrate", "uuid", "macros", "time", "postgres" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tokio = { version = "1", features = ["rt"] }
uuid = { version = "1", features = ["serde", "v4"] }

# Passwords
rand = { version = "0.8", features = ["std_rng"] }
argon2 = { version = "0.5", features = ["std"] }

# JWTs
jsonwebtoken = "8"

# Configuration
serde-aux = "4"

# On Linux pore-rust feature is required due to openssl crate
[target.'cfg(target_os = "linux")'.dev-dependencies]
jwt-simple = { version = "0.12.7", default-features=false, features=["pure-rust"] }

[target.'cfg(not(target_os = "linux"))'.dev-dependencies]
jwt-simple = { version = "0.12.7" }